# obs-remote

./: .gitignore  README.md  main.py  obs-remote.py  obs-remote.spec  obs_remote.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
